Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_UCharacterMovementComponent_ForceReplicationUpdate(UCharacterMovementComponent* Self)
	{
		Self->ForceReplicationUpdate();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetAirControl(UCharacterMovementComponent* Self, float DeltaTime, float TickAirControl, INT_PTR FallAcceleration)
	{
		auto _p0 = DeltaTime;
		auto _p1 = TickAirControl;
		auto _p2 = *(FVector*)FallAcceleration;
		return (INT_PTR) new FVector(Self->GetAirControl(_p0, _p1, _p2));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetAnalogInputModifier(UCharacterMovementComponent* Self)
	{
		return Self->GetAnalogInputModifier();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetBestDirectionOffActor(UCharacterMovementComponent* Self, AActor* BaseActor)
	{
		auto _p0 = BaseActor;
		return (INT_PTR) new FVector(Self->GetBestDirectionOffActor(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetCharacterOwner(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetCharacterOwner());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetCurrentAcceleration(UCharacterMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetCurrentAcceleration());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetDeltaRotation(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		return (INT_PTR) new FRotator(Self->GetDeltaRotation(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetFallingLateralAcceleration(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		return (INT_PTR) new FVector(Self->GetFallingLateralAcceleration(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetGravityZ(UCharacterMovementComponent* Self)
	{
		return Self->GetGravityZ();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetGroundMovementMode(UCharacterMovementComponent* Self)
	{
		return Self->GetGroundMovementMode();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetImpartedMovementBaseVelocity(UCharacterMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetImpartedMovementBaseVelocity());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetLedgeMove(UCharacterMovementComponent* Self, INT_PTR OldLocation, INT_PTR Delta, INT_PTR GravDir)
	{
		auto _p0 = *(FVector*)OldLocation;
		auto _p1 = *(FVector*)Delta;
		auto _p2 = *(FVector*)GravDir;
		return (INT_PTR) new FVector(Self->GetLedgeMove(_p0, _p1, _p2));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxBrakingDeceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxBrakingDeceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxJumpHeight(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxJumpHeight();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxJumpHeightWithJumpTime(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxJumpHeightWithJumpTime();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxSpeed(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxSpeed();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMinAnalogSpeed(UCharacterMovementComponent* Self)
	{
		return Self->GetMinAnalogSpeed();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetModifiedMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetModifiedMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMovementBase(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetMovementBase());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMovementName(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetMovementName());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetNetworkSafeRandomAngleDegrees(UCharacterMovementComponent* Self)
	{
		return Self->GetNetworkSafeRandomAngleDegrees();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetPathFollowingBrakingDistance(UCharacterMovementComponent* Self, float MaxSpeed)
	{
		auto _p0 = MaxSpeed;
		return Self->GetPathFollowingBrakingDistance(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetPenetrationAdjustment(UCharacterMovementComponent* Self, INT_PTR Hit)
	{
		auto _p0 = *(FHitResult*)Hit;
		return (INT_PTR) new FVector(Self->GetPenetrationAdjustment(_p0));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetPerchRadiusThreshold(UCharacterMovementComponent* Self)
	{
		return Self->GetPerchRadiusThreshold();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetServerLastTransformUpdateTimeStamp(UCharacterMovementComponent* Self)
	{
		return Self->GetServerLastTransformUpdateTimeStamp();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetSimulationTimeStep(UCharacterMovementComponent* Self, float RemainingTime, int32 Iterations)
	{
		auto _p0 = RemainingTime;
		auto _p1 = Iterations;
		return Self->GetSimulationTimeStep(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetValidPerchRadius(UCharacterMovementComponent* Self)
	{
		return Self->GetValidPerchRadius();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetWalkableFloorAngle(UCharacterMovementComponent* Self)
	{
		return Self->GetWalkableFloorAngle();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetWalkableFloorZ(UCharacterMovementComponent* Self)
	{
		return Self->GetWalkableFloorZ();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandleImpact(UCharacterMovementComponent* Self, INT_PTR Hit, float TimeSlice, INT_PTR MoveDelta)
	{
		auto _p0 = *(FHitResult*)Hit;
		auto _p1 = TimeSlice;
		auto _p2 = *(FVector*)MoveDelta;
		Self->HandleImpact(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandlePendingLaunch(UCharacterMovementComponent* Self)
	{
		return Self->HandlePendingLaunch();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandleSlopeBoosting(UCharacterMovementComponent* Self, INT_PTR SlideResult, INT_PTR Delta, float Time, INT_PTR Normal, INT_PTR Hit)
	{
		auto _p0 = *(FVector*)SlideResult;
		auto _p1 = *(FVector*)Delta;
		auto _p2 = Time;
		auto _p3 = *(FVector*)Normal;
		auto _p4 = *(FHitResult*)Hit;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->HandleSlopeBoosting_WRAP(_p0, _p1, _p2, _p3, _p4));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandleSwimmingWallHit(UCharacterMovementComponent* Self, INT_PTR Hit, float DeltaTime)
	{
		auto _p0 = *(FHitResult*)Hit;
		auto _p1 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->HandleSwimmingWallHit_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasPredictionData_Client(UCharacterMovementComponent* Self)
	{
		return Self->HasPredictionData_Client();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasPredictionData_Server(UCharacterMovementComponent* Self)
	{
		return Self->HasPredictionData_Server();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasRootMotionSources(UCharacterMovementComponent* Self)
	{
		return Self->HasRootMotionSources();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasValidData(UCharacterMovementComponent* Self)
	{
		return Self->HasValidData();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ImmersionDepth(UCharacterMovementComponent* Self)
	{
		return Self->ImmersionDepth();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsCrouching(UCharacterMovementComponent* Self)
	{
		return Self->IsCrouching();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsFalling(UCharacterMovementComponent* Self)
	{
		return Self->IsFalling();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsFlying(UCharacterMovementComponent* Self)
	{
		return Self->IsFlying();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsMovementInProgress(UCharacterMovementComponent* Self)
	{
		return Self->IsMovementInProgress();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsMovingOnGround(UCharacterMovementComponent* Self)
	{
		return Self->IsMovingOnGround();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsSwimming(UCharacterMovementComponent* Self)
	{
		return Self->IsSwimming();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsValidLandingSpot(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR Hit)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto _p1 = *(FHitResult*)Hit;
		return Self->IsValidLandingSpot(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWalkable(UCharacterMovementComponent* Self, INT_PTR Hit)
	{
		auto _p0 = *(FHitResult*)Hit;
		return Self->IsWalkable(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWalking(UCharacterMovementComponent* Self)
	{
		return Self->IsWalking();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWithinEdgeTolerance(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR TestImpactPoint, float CapsuleRadius)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto _p1 = *(FVector*)TestImpactPoint;
		auto _p2 = CapsuleRadius;
		return Self->IsWithinEdgeTolerance(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_JumpOff(UCharacterMovementComponent* Self, AActor* MovementBaseActor)
	{
		auto _p0 = MovementBaseActor;
		Self->JumpOff(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_JumpOutOfWater(UCharacterMovementComponent* Self, INT_PTR WallNormal)
	{
		auto _p0 = *(FVector*)WallNormal;
		Self->JumpOutOfWater(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_ComputeFloorDist(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, float LineDistance, float SweepDistance, float SweepRadius, INT_PTR FloorResult)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto _p1 = LineDistance;
		auto _p2 = SweepDistance;
		auto _p3 = SweepRadius;
		auto _p4 = *(FFindFloorResult*)FloorResult;
		Self->K2_ComputeFloorDist(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_FindFloor(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR FloorResult)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto _p1 = *(FFindFloorResult*)FloorResult;
		Self->K2_FindFloor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetModifiedMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetModifiedMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetWalkableFloorAngle(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetWalkableFloorAngle();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetWalkableFloorZ(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetWalkableFloorZ();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Launch(UCharacterMovementComponent* Self, INT_PTR LaunchVel)
	{
		auto _p0 = *(FVector*)LaunchVel;
		Self->Launch(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_LimitAirControl(UCharacterMovementComponent* Self, float DeltaTime, INT_PTR FallAcceleration, INT_PTR HitResult, bool bCheckForValidLandingSpot)
	{
		auto _p0 = DeltaTime;
		auto _p1 = *(FVector*)FallAcceleration;
		auto _p2 = *(FHitResult*)HitResult;
		auto _p3 = bCheckForValidLandingSpot;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->LimitAirControl_WRAP(_p0, _p1, _p2, _p3));
	}